# AncientSynth

./: .gitignore  BUILD.md  CMakeLists.txt  build.sh  setup.sh
Source/: DSP.h  Engines.h  PluginProcessor.cpp  Presets.h
Source/UI/: UI.h
